--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group 'io.advantageous.gradle'
-version '2.0.0'
+version '2.5.0-SNAPSHOT'
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
