--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,13 @@ buildscript {
 }
 
 group 'io.advantageous.gradle'
-version '2.5.0-SNAPSHOT'
+version '2.5.0'
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: "com.gradle.plugin-publish"
+apply plugin: "java-gradle-plugin"
 
 sourceCompatibility = 1.8
 
@@ -30,6 +32,24 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
+    testCompile group: 'junit', name: 'junit', version: '4.4'
+}
+
+publishing {
+    repositories {
+        maven {
+            url "build/repository"
+        }
+    }
+}
+
+gradlePlugin {
+    plugins {
+        "marathon-deploy-plugin" {
+            id = "io.advantageous.marathon"
+            implementationClass = "io.advantageous.gradle.MarathonDeployPlugin"
+        }
+    }
 }
 
 pluginBundle {
