--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ version '3.0.0'
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin: 'signing'
 apply plugin: 'maven-publish'
 apply plugin: "com.gradle.plugin-publish"
 apply plugin: "java-gradle-plugin"
@@ -26,6 +27,21 @@ repositories {
 
 project.task("wrapper", type: Wrapper) {
     gradleVersion = '3.0'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
 
 dependencies {
@@ -62,6 +78,61 @@ pluginBundle {
         marathonDeployPlugin {
             id = 'io.advantageous.marathon'
             displayName = 'Marathon Deployment Plugin'
+        }
+    }
+}
+
+signing {
+    required false
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                try {
+                    authentication(userName: sonatypeUsername, password: sonatypePassword)
+                } catch (MissingPropertyException ignore) {
+                }
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                try {
+                    authentication(userName: sonatypeUsername, password: sonatypePassword)
+                } catch (MissingPropertyException ignore) {
+                }
+            }
+
+            pom.project {
+                packaging 'jar'
+                url 'https://github.com/advantageous/marathon-deploy-plugin'
+                name archivesBaseName
+                description "Deploy your application to an Apache Marathon cluster."
+
+                scm {
+                    url 'scm:git@github.com:advantageous/marathon-deploy-plugin.git'
+                    connection 'scm:git@github.com:advantageous/marathon-deploy-plugin.git'
+                    developerConnection 'scm:git@github.com:advantageous/marathon-deploy-plugin.git'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'sailorgeoffrey'
+                        name 'Geoffrey Chandler'
+                    }
+                }
+            }
         }
     }
 }
